# phoenix-ipc

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: crash_recovery_test.cpp.321D466BEE4BCE61.idx  hello_world.cpp.76FDB56A9E202A92.idx  ipc_client.cpp.FFA4E637B495F47D.idx  ipc_client.hpp.305871E27F3035BD.idx  ipc_client_example.cpp.DC948D62954BFFFA.idx  ipc_server.cpp.47FEAA0A3D382398.idx  ipc_server.hpp.A19EF929B6474BBA.idx  ipc_server_example.cpp.E2D3702C167C5F29.idx  ipc_types.hpp.A1BF55D627AE14E3.idx  isignal_mechanism.hpp.B448C63F97C7F677.idx  linux_eventfd.hpp.61F938B1EA42D8FB.idx  msg_header.hpp.8F837F613B4F0637.idx  phoenix_shm_layout.hpp.1EAA3F396C3AC935.idx  spsc_ring_buffer.hpp.903935C2494DECBA.idx  stress_test.cpp.44EA42CF0CFBA168.idx  thread_monitor.hpp.D98AFD5335429D1A.idx  unit_tests.cpp.6FF9EFF3807E3F8A.idx  worker_channel.hpp.FF9525BD5B54DE6D.idx
examples/: hello_world.cpp  ipc_client_example.cpp  ipc_server_example.cpp  simple_consumer.cpp  simple_producer.cpp
include/phoenix/coordination/: coordination_file.hpp
include/phoenix/core/: spsc_ring_buffer.hpp
include/phoenix/hal/: ishared_memory.hpp  isignal_mechanism.hpp
include/phoenix/ipc/: ipc_client.hpp  ipc_server.hpp  ipc_types.hpp  phoenix_consumer.hpp  phoenix_producer.hpp
include/phoenix/layout/: phoenix_shm_layout.hpp  simplified_shm_layout.hpp  thread_monitor.hpp  worker_channel.hpp
include/phoenix/platform/: linux_eventfd.hpp
include/phoenix/protocol/: msg_header.hpp
src/coordination/: coordination_file.cpp
src/ipc/: ipc_client.cpp  ipc_server.cpp  phoenix_consumer.cpp  phoenix_producer.cpp
test/: crash_recovery_test.cpp  stress_test.cpp  unit_tests.cpp
